--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
   <h2>My Image</h2>
-  <img src="images/sc.jpg" width="600">
+  <img src="images/cake.jpg" width="600">
 </body>
 </html>
+
